tests/baselines/reference/overloadingOnConstantsInImplementation(strict=true).errors.txt
overloadingOnConstantsInImplementation.ts(1,10): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
overloadingOnConstantsInImplementation.ts(2,10): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.


==== overloadingOnConstantsInImplementation.ts (2 errors) ====
    function foo(a: 'hi', x: string);
             ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo(a: 'hi', x: string);
             ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo(a: 'hi', x: any) {
    }